--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-version: '3.8'
+version: "3.8"
 
 services:
   phpmyadmin:
+    container_name: phpmyadmin
     image: phpmyadmin:latest
     restart: always
+    ports:
+      - "80:80"
     environment:
       PMA_HOST: cmcfm2a6r0003nxadea86nal8
       PMA_USER: cmcfm2a6o0001adnx22xa37zj
       PMA_PASSWORD: eZ0BJlZtZfkmnqS6ERfH4dJP
     labels:
-      - "coolify.url=db.quattrogcc.ae"
+      - "coolify.url=phpMyAdmin.quattrogcc.ae"
