--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,13 @@ version: "3.8"
 
 services:
   phpmyadmin:
-    container_name: phpmyadmin
     image: phpmyadmin:latest
+    container_name: phpmyadmin
     restart: always
-    ports:
-      - "80:80"
     environment:
       PMA_HOST: cmcfm2a6r0003nxadea86nal8
       PMA_USER: cmcfm2a6o0001adnx22xa37zj
       PMA_PASSWORD: eZ0BJlZtZfkmnqS6ERfH4dJP
     labels:
       - "coolify.url=phpMyAdmin.quattrogcc.ae"
+      - "coolify.port=80"
