--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     container_name: cmcfnipsy0011nxadscdo3azd-phpmyadmin
     restart: always
     environment:
-      PMA_HOST: cmcfm2a6r0003nxadea86nal8
+      PMA_ARBITRARY: 1
       PMA_USER: cmcfm2a6o0001adnx22xa37zj
       PMA_PASSWORD: eZ0BJlZtZfkmnqS6ERfH4dJP
     labels:
       - "coolify.url=phpMyAdmin.quattrogcc.ae"
       - "coolify.port=80"
     networks:
-      - coolify  # ← اضف دي
+      - coolify
 
 networks:
   coolify:
