--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - mysql_data:/bitnami/mysql
     networks:
       - coolify
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   phpmyadmin:
     image: phpmyadmin:latest
@@ -28,7 +33,8 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - mysql-db
+      mysql-db:
+        condition: service_healthy
     networks:
       - coolify
 
