--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,6 @@ services:
       - mysql_data:/bitnami/mysql
     networks:
       - coolify
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   phpmyadmin:
     image: phpmyadmin:latest
@@ -33,8 +28,7 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      mysql-db:
-        condition: service_healthy
+      - mysql-db
     networks:
       - coolify
 
