--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,27 +4,27 @@ services:
   mysql-db:
     image: bitnami/mysql:8.0
     container_name: cmcfm2a6r0003nxadea86nal8
-    restart: always
+    restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=eZ0BJ1ZtZfkmnqS6ERfH4dJP
-      - MYSQL_DATABASE=cmcfm2a6p0003adnx6i5jhui8
-      - MYSQL_USER=cmcfm2a6o0001adnx22za37zj
-      - MYSQL_PASSWORD=eZ0BJ1ZtZfkmnqS6ERfH4dJP
+      MYSQL_ROOT_PASSWORD: eZ0BJ1ZtZfkmnqS6ERfH4dJP
+      MYSQL_DATABASE: cmcfm2a6p0003adnx6i5jhui8
+      MYSQL_USER: cmcfm2a6o0001adnx22za37zj
+      MYSQL_PASSWORD: eZ0BJ1ZtZfkmnqS6ERfH4dJP
     volumes:
-      - mysql_data:/bitnami/mysql
+      - db_data:/bitnami/mysql
+    ports:
+      - "3306:3306"
     networks:
       - coolify
 
   phpmyadmin:
-    image: phpmyadmin:latest
-    container_name: cmcfoyn2a0017nxad23avu68l-phpmyadmin
-    restart: always
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: unless-stopped
     environment:
       PMA_HOST: cmcfm2a6r0003nxadea86nal8
-      PMA_PORT: 3306
       PMA_USER: cmcfm2a6o0001adnx22za37zj
       PMA_PASSWORD: eZ0BJ1ZtZfkmnqS6ERfH4dJP
-      PMA_DB: cmcfm2a6p0003adnx6i5jhui8
     ports:
       - "8080:80"
     depends_on:
@@ -32,9 +32,9 @@ services:
     networks:
       - coolify
 
-volumes:
-  mysql_data:
-
 networks:
   coolify:
     external: true
+
+volumes:
+  db_data:
